Avoid size flicker in image viewer

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -160,6 +160,12 @@ body {
         top: 50%;
         left: 50%;
         transform: translateX(-50%) translateY(-50%);
+        
+        @supports(object-fit: contain) {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
     }
 
     .back-link {
